-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 7.0.1
-
None
-
-
d2160e8b4f (qt-creator/qt-creator/9.0) d2160e8b4f (qt-creator/qt-creator/master)
Sometimes, when I try to add an existing file to the project (or resource file), it shows error that it has failed to add the file to git repo.
This is the output. There is no path specified, so git can't find the file:
12:58:22 Running in C:\Work\Source\fdm-qml\ui\qml_ui: C:\Program Files\Git\cmd\git.exe add --intent-to-add AuthDialog.qml fatal: pathspec 'AuthDialog.qml' did not match any files The command "C:\Program Files\Git\cmd\git.exe add --intent-to-add AuthDialog.qml" terminated with exit code 128.
For Gerrit Dashboard: QTCREATORBUG-27644 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
437613,2 | Git: Fix adding existing files in nested directories | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |