Git: Fix adding existing files in nested directories

Amends 48c56416f5e128c04f2d2d867b518775e0527607.

Fixes: QTCREATORBUG-27644
Change-Id: I4ef58c017e4fcf8fa48905f7e0b649433b3cac0f
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>